Start working on the first page

--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,7 @@ button {
 }
 
 #App {
-    background-color: #282c34;
+    /* background-color: #282c34; */
     min-height: 100vh;
 
     display: flex;
