--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -7,14 +7,14 @@
     align-items: center;
 }
 
-.main-title-container {
+#Home .main-title-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-.main-title {
+#Home .main-title-container .main-title {
     font-size: calc(5px + 4vw);
     font-weight: bold;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -22,7 +22,7 @@
     text-shadow: 2px 2px 8px rgb(73, 73, 165);
 }
 
-.start-button {
+#Home .start-button {
   background-color: #eaebee;
   border-radius: 100px;
   box-shadow: rgba(130, 141, 189, 0.2) 0 -25px 18px -14px inset,rgba(130, 141, 189, 0.15) 0 1px 2px,rgba(130, 141, 189, 0.15) 0 2px 4px,rgba(130, 141, 189, 0.15) 0 4px 8px,rgba(130, 141, 189, 0.15) 0 8px 16px,rgba(130, 141, 189, 0.15) 0 16px 32px;
@@ -41,7 +41,7 @@
   touch-action: manipulation;
 }
 
-.start-button:hover {
+#Home .start-button:hover {
   box-shadow: rgba(130, 141, 189, 0.35) 0 -25px 18px -14px inset,rgba(130, 141, 189, 0.35) 0 1px 2px,rgba(130, 141, 189, 0.35) 0 2px 4px,rgba(130, 141, 189, 0.35) 0 4px 8px,rgba(130, 141, 189, 0.35) 0 8px 16px,rgba(130, 141, 189, 0.35) 0 16px 32px;
   transform: scale(1.05);
 }
