continue insert data page

--- a/src/components/InsertData/InsertData.css
+++ b/src/components/InsertData/InsertData.css
@@ -1,9 +1,10 @@
 #InsertData {
     width: 100%;
     height: 100%;
-    padding-top: 40vh;
+    padding-top: 35vh;
     display: grid;
-    grid-template-rows: 0.35fr 0.5 0.15fr;
+    /* grid-template-rows: 0.3fr 0.4fr 0.15fr 0.35fr; */
+    grid-template-rows: auto auto auto;
     gap: 20px;
     /* justify-content: center;
     align-items: center;  */
@@ -15,11 +16,12 @@
     display: grid;
     grid-template-rows: repeat(2, 1fr);
     justify-items: left;
-    padding-left: 30vw;
+    padding-left: 28vw;
 }
 
-#InsertData .upload-target-locations-container .title-text {
-    font-size: calc(5px + 2.5vw);
+#InsertData .upload-target-locations-container .title-text,
+#InsertData .numbers-of-drones-container .title-text {
+    font-size: calc(5px + 2vw);
     font-weight: bold;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     padding-bottom: 10px; 
@@ -41,4 +43,70 @@
     font-size: calc(5px + 1vw);
     color: rgb(9, 9, 96);
     padding-left: 2px;
+}
+
+#InsertData .numbers-of-drones-container {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
+    justify-items: left;
+    align-items: center;
+    padding-left: 28vw;
+}
+
+#InsertData .numbers-of-drones-container .option-radio-row-container {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+}
+
+#InsertData .numbers-of-drones-container .option-radio-row-container .insert-numbers-of-drones-container {
+    padding-left: 5vw;
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+}
+
+#InsertData .numbers-of-drones-container .option-radio-row-container .radio-btn-text,
+#InsertData .numbers-of-drones-container .option-radio-row-container .insert-numbers-of-drones-container .insert-number-of-drones-text {
+    font-size: calc(5px + 1vw);
+    color: rgb(9, 9, 96);
+}
+
+#InsertData .numbers-of-drones-container .option-radio-row-container .insert-numbers-of-drones-container .insert-number-of-drones-input {
+    width: 30%;
+    border: 1px solid rgb(9, 9, 96);
+    border-radius: 8px;
+}
+
+#InsertData .continue-button-container {
+    width: 100%;
+    height: 100%;
+}
+
+#InsertData .continue-button-container .continue-button {
+    width: 20%;
+    height: 100%;
+    background-color: #eaebee;
+    border-radius: 100px;
+    box-shadow: rgba(130, 141, 189, 0.2) 0 -25px 18px -14px inset,rgba(130, 141, 189, 0.15) 0 1px 2px,rgba(130, 141, 189, 0.15) 0 2px 4px,rgba(130, 141, 189, 0.15) 0 4px 8px,rgba(130, 141, 189, 0.15) 0 8px 16px,rgba(130, 141, 189, 0.15) 0 16px 32px;
+    color: rgb(86, 86, 242);
+    cursor: pointer;
+    display: inline-block;
+    font-family: CerebriSans-Regular,-apple-system,system-ui,Roboto,sans-serif;
+    padding: 7px 20px;
+    text-align: center;
+    text-decoration: none;
+    transition: all 250ms;
+    border: 0;
+    font-size: 19px;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+}
+
+#InsertData .continue-button-container .continue-button:hover {
+    box-shadow: rgba(130, 141, 189, 0.35) 0 -25px 18px -14px inset,rgba(130, 141, 189, 0.35) 0 1px 2px,rgba(130, 141, 189, 0.35) 0 2px 4px,rgba(130, 141, 189, 0.35) 0 4px 8px,rgba(130, 141, 189, 0.35) 0 8px 16px,rgba(130, 141, 189, 0.35) 0 16px 32px;
+    transform: scale(1.05);
 }
