--- a/src/components/InsertData/InsertData.css
+++ b/src/components/InsertData/InsertData.css
@@ -10,13 +10,20 @@
     align-items: center;  */
 }
 
+#InsertData .required-asterisk {
+    font-size: calc(15px + 1vw);
+    font-weight: bold;
+    color: red;
+    padding-top: 10px;
+}
+
 #InsertData .upload-target-locations-container {
     width: 100%;
     height: 100%;
     display: grid;
     grid-template-rows: repeat(2, 1fr);
     justify-items: left;
-    padding-left: 28vw;
+    padding-left: 27vw;
 }
 
 #InsertData .upload-target-locations-container .title-text,
@@ -35,6 +42,7 @@
     grid-template-columns: 0.3fr 0.7fr;
     justify-items: left;
     align-items: center;
+    padding-left: 1.4vw;
     /* gap: 20px; */
 }
 
@@ -52,13 +60,21 @@
     grid-template-rows: repeat(3, 1fr);
     justify-items: left;
     align-items: center;
-    padding-left: 28vw;
+    padding-left: 27vw;
 }
 
+#InsertData .upload-target-locations-container .main-title-container,
+#InsertData .numbers-of-drones-container .main-title-container,
 #InsertData .numbers-of-drones-container .option-radio-row-container {
     display: flex;
     flex-direction: row;
     gap: 10px;
+    justify-content: center;
+    align-items: center;
+}
+
+#InsertData .numbers-of-drones-container .option-radio-row-container {
+    padding-left: 1.2vw;
 }
 
 #InsertData .numbers-of-drones-container .option-radio-row-container .insert-numbers-of-drones-container {
@@ -66,6 +82,8 @@
     display: flex;
     flex-direction: row;
     gap: 10px;
+    justify-content: center;
+    align-items: center;
 }
 
 #InsertData .numbers-of-drones-container .option-radio-row-container .radio-btn-text,
