--- a/src/components/InsertData/InsertData.css
+++ b/src/components/InsertData/InsertData.css
@@ -38,12 +38,50 @@
 #InsertData .upload-target-locations-container .upload-file-container {
     width: 100%;
     height: 100%;
-    display: grid;
-    grid-template-columns: 0.3fr 0.7fr;
+    /* display: grid;
+    grid-template-columns: 0.2fr 0.5fr 0.3fr; */
+    display: flex;
+    flex-direction: row;
     justify-items: left;
     align-items: center;
     padding-left: 1.4vw;
-    /* gap: 20px; */
+    gap: 20px;
+}
+
+#InsertData .upload-target-locations-container .upload-file-container .disapper-file-upload {
+    display: none;
+}
+
+#InsertData .upload-target-locations-container .upload-file-container .button-upload-file {
+    width: 100%;
+    height: 100%;
+    background-color: #eaebee;
+    border-radius: 22px;
+    box-shadow: rgba(130, 141, 189, 0.2) 0 -25px 18px -14px inset,rgba(130, 141, 189, 0.15) 0 1px 2px,rgba(130, 141, 189, 0.15) 0 2px 4px,rgba(130, 141, 189, 0.15) 0 4px 8px,rgba(130, 141, 189, 0.15) 0 8px 16px,rgba(130, 141, 189, 0.15) 0 16px 32px;
+    color: rgb(86, 86, 242);
+    cursor: pointer;
+    display: inline-block;
+    font-family: CerebriSans-Regular,-apple-system,system-ui,Roboto,sans-serif;
+    padding: 7px 20px;
+    text-align: center;
+    text-decoration: none;
+    transition: all 250ms;
+    border: 0;
+    font-size: 19px;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+}
+
+#InsertData .upload-target-locations-container .upload-file-container .button-upload-file:hover {
+    box-shadow: rgba(130, 141, 189, 0.35) 0 -25px 18px -14px inset,rgba(130, 141, 189, 0.35) 0 1px 2px,rgba(130, 141, 189, 0.35) 0 2px 4px,rgba(130, 141, 189, 0.35) 0 4px 8px,rgba(130, 141, 189, 0.35) 0 8px 16px,rgba(130, 141, 189, 0.35) 0 16px 32px;
+    transform: scale(1.05);
+}
+
+#InsertData .upload-target-locations-container .upload-file-container .button-upload-file-succeeded {
+    /* background-color: #9db1ea !important; */
+    border: 2px solid rgb(9, 9, 96) !important;
+    color: rgb(9, 9, 96) !important;
 }
 
 #InsertData .upload-target-locations-container .upload-file-container .upload-file-text {
@@ -86,6 +124,7 @@
     align-items: center;
 }
 
+#InsertData .upload-target-locations-container .upload-file-container .upload-file-name-text,
 #InsertData .numbers-of-drones-container .option-radio-row-container .radio-btn-text,
 #InsertData .numbers-of-drones-container .option-radio-row-container .insert-numbers-of-drones-container .insert-number-of-drones-text {
     font-size: calc(5px + 1vw);
