--- a/src/components/InsertData/InsertData.css
+++ b/src/components/InsertData/InsertData.css
@@ -17,6 +17,10 @@
     padding-top: 10px;
 }
 
+#InsertData .error-msg {
+    color: red;
+}
+
 #InsertData .upload-target-locations-container {
     width: 100%;
     height: 100%;
@@ -166,4 +170,11 @@
 #InsertData .continue-button-container .continue-button:hover {
     box-shadow: rgba(130, 141, 189, 0.35) 0 -25px 18px -14px inset,rgba(130, 141, 189, 0.35) 0 1px 2px,rgba(130, 141, 189, 0.35) 0 2px 4px,rgba(130, 141, 189, 0.35) 0 4px 8px,rgba(130, 141, 189, 0.35) 0 8px 16px,rgba(130, 141, 189, 0.35) 0 16px 32px;
     transform: scale(1.05);
+}
+
+#InsertData .continue-button-container .continue-button:disabled {
+    /* background:  #fff;
+    color: #ccc; */
+    opacity: 0.6;
+    cursor: no-drop;
 }
