--- a/src/components/CompareNumberOfDrones/CompareNumberOfDrones.css
+++ b/src/components/CompareNumberOfDrones/CompareNumberOfDrones.css
@@ -56,12 +56,12 @@
     align-items: center;
     gap: 40px;
     padding-top: 50px;
-    padding-left: 25vw;
+    padding-left: 19.5vw;
 }
 
 #CompareNumberOfDrones .continue-buttons-container .box-continue-with-change-number-of-drones {
-    width: 350px;
-    height: 160px;
+    width: 450px;
+    height: 180px;
     border: 3px dashed rgb(73, 73, 165);
     display: grid;
     grid-template-rows: 0.8fr 0.2fr;
@@ -73,9 +73,10 @@
     width: 100%;
     height: 100%;
     display: grid;
-    grid-template-columns: 0.6fr 0.4fr;
+    grid-template-columns: 0.5fr 0.4fr 0.2fr;
+    gap: 10px;
+    justify-items: left;
     align-items: center;
-    justify-items: center;
 }
 
 #CompareNumberOfDrones .continue-buttons-container .box-continue-with-change-number-of-drones .change-number-of-drones .change-text {
@@ -84,15 +85,15 @@
 }
 
 #CompareNumberOfDrones .continue-buttons-container .box-continue-with-change-number-of-drones .change-number-of-drones .change-number-of-drones-input {
-    width: 70%;
+    width: 100%;
     height: 50%;
     border: 1px solid rgb(9, 9, 96);
     border-radius: 8px;
 }
 
 #CompareNumberOfDrones .continue-buttons-container .box-continue-without-change-number-of-drones {
-    width: 350px;
-    height: 160px;
+    width: 450px;
+    height: 180px;
     border: 3px dashed rgb(73, 73, 165);
     display: flex;
     justify-content: center;
@@ -125,6 +126,11 @@
 #CompareNumberOfDrones .continue-buttons-container .box-continue-without-change-number-of-drones .continue-button:hover {
     box-shadow: rgba(130, 141, 189, 0.35) 0 -25px 18px -14px inset,rgba(130, 141, 189, 0.35) 0 1px 2px,rgba(130, 141, 189, 0.35) 0 2px 4px,rgba(130, 141, 189, 0.35) 0 4px 8px,rgba(130, 141, 189, 0.35) 0 8px 16px,rgba(130, 141, 189, 0.35) 0 16px 32px;
     transform: scale(1.05);
+}
+
+#CompareNumberOfDrones .continue-buttons-container .box-continue-with-change-number-of-drones .continue-button:disabled {
+    opacity: 0.6;
+    cursor: no-drop;
 }
 
 #CompareNumberOfDrones .continue-buttons-container .box-continue-with-change-number-of-drones .continue-button {
