--- a/src/components/Results/Results.css
+++ b/src/components/Results/Results.css
@@ -47,3 +47,12 @@
     width: 100%;
     height: 100%;
 }
+
+.loading-spinner {
+    padding-top: 50vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+}
