--- a/src/components/CompareNumberOfDrones/CompareNumberOfDrones.css
+++ b/src/components/CompareNumberOfDrones/CompareNumberOfDrones.css
@@ -1,7 +1,7 @@
 #CompareNumberOfDrones {
     width: 100%;
     height: 100%;
-    padding-top: 35vh;
+    padding-top: 30vh;
     display: grid;
     grid-template-rows: auto auto auto;
 }
@@ -10,6 +10,7 @@
 #CompareNumberOfDrones .display-number-of-drones-optimal-container {
     display: grid;
     grid-template-columns: 0.5fr 0.5fr;
+    gap: 10px;
     align-items: center;
     justify-items: left;
     padding-left: 30vw;
