--- a/src/components/InsertData/InsertData.css
+++ b/src/components/InsertData/InsertData.css
@@ -2,12 +2,11 @@
     width: 100%;
     height: 100%;
     padding-top: 35vh;
+    padding-bottom: 10vh;
     display: grid;
     /* grid-template-rows: 0.3fr 0.4fr 0.15fr 0.35fr; */
     grid-template-rows: auto auto auto;
     gap: 20px;
-    /* justify-content: center;
-    align-items: center;  */
 }
 
 #InsertData .required-asterisk {
@@ -53,8 +52,8 @@
 }
 
 #InsertData .upload-target-locations-container .upload-file-container .button-upload-file {
-    width: 100%;
-    height: 100%;
+    /* width: 100%;
+    height: 100%; */
     background-color: #eaebee;
     border-radius: 22px;
     box-shadow: rgba(130, 141, 189, 0.2) 0 -25px 18px -14px inset,rgba(130, 141, 189, 0.15) 0 1px 2px,rgba(130, 141, 189, 0.15) 0 2px 4px,rgba(130, 141, 189, 0.15) 0 4px 8px,rgba(130, 141, 189, 0.15) 0 8px 16px,rgba(130, 141, 189, 0.15) 0 16px 32px;
@@ -143,7 +142,8 @@
 
 #InsertData .continue-button-container .continue-button {
     width: 20%;
-    height: 100%;
+    min-width: fit-content;
+    /* height: 100%; */
     background-color: #eaebee;
     border-radius: 100px;
     box-shadow: rgba(130, 141, 189, 0.2) 0 -25px 18px -14px inset,rgba(130, 141, 189, 0.15) 0 1px 2px,rgba(130, 141, 189, 0.15) 0 2px 4px,rgba(130, 141, 189, 0.15) 0 4px 8px,rgba(130, 141, 189, 0.15) 0 8px 16px,rgba(130, 141, 189, 0.15) 0 16px 32px;
