--- a/src/components/CompareNumberOfDrones/CompareNumberOfDrones.css
+++ b/src/components/CompareNumberOfDrones/CompareNumberOfDrones.css
@@ -65,7 +65,7 @@
 #CompareNumberOfDrones .continue-buttons-container .box-continue-with-change-number-of-drones {
     width: 450px;
     height: 180px;
-    border: 3px dashed rgb(73, 73, 165);
+    border: 4px dashed rgb(73, 73, 165);
     display: grid;
     grid-template-rows: 0.8fr 0.2fr;
     gap: 20px;
@@ -76,10 +76,11 @@
     width: 100%;
     height: 100%;
     display: grid;
-    grid-template-columns: 0.5fr 0.4fr 0.2fr;
+    grid-template-columns: 0.45fr 0.4fr 0.25fr;
     gap: 10px;
     justify-items: left;
     align-items: center;
+    padding-left: 10px;
 }
 
 #CompareNumberOfDrones .continue-buttons-container .box-continue-with-change-number-of-drones .change-number-of-drones .change-text {
@@ -97,7 +98,7 @@
 #CompareNumberOfDrones .continue-buttons-container .box-continue-without-change-number-of-drones {
     width: 450px;
     height: 180px;
-    border: 3px dashed rgb(73, 73, 165);
+    border: 4px dashed rgb(73, 73, 165);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -110,7 +111,7 @@
     background-color: #eaebee;
     border-radius: 100px;
     box-shadow: rgba(130, 141, 189, 0.2) 0 -25px 18px -14px inset,rgba(130, 141, 189, 0.15) 0 1px 2px,rgba(130, 141, 189, 0.15) 0 2px 4px,rgba(130, 141, 189, 0.15) 0 4px 8px,rgba(130, 141, 189, 0.15) 0 8px 16px,rgba(130, 141, 189, 0.15) 0 16px 32px;
-    color: rgb(86, 86, 242);
+    color: rgb(9, 9, 96);
     cursor: pointer;
     display: inline-block;
     font-family: CerebriSans-Regular,-apple-system,system-ui,Roboto,sans-serif;
@@ -119,15 +120,15 @@
     text-decoration: none;
     transition: all 250ms;
     border: 0;
-    font-size: 19px;
+    font-size: calc(5px + 1vw);
     user-select: none;
     -webkit-user-select: none;
     touch-action: manipulation;
+    box-shadow: rgba(130, 141, 189, 0.35) 0 -25px 18px -14px inset,rgba(130, 141, 189, 0.35) 0 1px 2px,rgba(130, 141, 189, 0.35) 0 2px 4px,rgba(130, 141, 189, 0.35) 0 4px 8px,rgba(130, 141, 189, 0.35) 0 8px 16px,rgba(130, 141, 189, 0.35) 0 16px 32px;
 }
 
 #CompareNumberOfDrones .continue-buttons-container .box-continue-with-change-number-of-drones .continue-button:hover,
 #CompareNumberOfDrones .continue-buttons-container .box-continue-without-change-number-of-drones .continue-button:hover {
-    box-shadow: rgba(130, 141, 189, 0.35) 0 -25px 18px -14px inset,rgba(130, 141, 189, 0.35) 0 1px 2px,rgba(130, 141, 189, 0.35) 0 2px 4px,rgba(130, 141, 189, 0.35) 0 4px 8px,rgba(130, 141, 189, 0.35) 0 8px 16px,rgba(130, 141, 189, 0.35) 0 16px 32px;
     transform: scale(1.05);
 }
 
